--- a/styles.css
+++ b/styles.css
@@ -9,9 +9,12 @@ body {
     align-items: center;
     height: 100vh;
 }
-
-.gameboard {
+.container {
     height: 100vh;
+    width: 100%;
+}
+.gameboard {
+    height: calc(100vh - 300px);
     width: 100vh;
     border-radius: 50%;
     overflow: hidden;
@@ -20,6 +23,12 @@ body {
     max-width: 60vh;
 }
 
+.puntos {
+    font-size: 24px;
+    color: white;
+    text-align: center;
+    padding: 70px;
+}
 .color {
     width: 50%;
     height: 50%;
@@ -73,7 +82,7 @@ body {
     color: #313942;
     font-size: 2.5rem;
     position: absolute;
-    top: calc(50% - 50px);
+    top: calc(50% - -30px);
     left: calc(50% - 200px);
 }
 
